test/files/neg/ysysdef-nojava.scala
object Test {
  println("this should work")
  Thread.sleep(100) // this should fail
}
